--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-skywalking",
   "version": "0.0.1",
-  "description": "A skywalking module for Nest framework (node.js) using skywalking-nodejs library",
+  "description": "A skywalking module for Nest framework (node.js) using skywalking-backend-js library",
   "repository": {
     "type": "git",
     "url": "https://github.com/wokim/nestjs-skywalking"
@@ -13,7 +13,7 @@
   "keywords": [
     "nestjs",
     "SkyWalking",
-    "skywalking-nodejs",
+    "skywalking-backend-js",
     "Nest.js",
     "APM",
     "Tracing",
@@ -28,10 +28,6 @@
     "prebuild": "rimraf lib",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -41,12 +37,13 @@
   "peerDependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "skywalking-nodejs": "^0.3.3"
+    "skywalking-backend-js": "^0.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
