ci: update Codecov action to v4.0.1 and badge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,13 +26,13 @@ jobs:
     - name: Run tests and collect coverage
       run: npm run test:cov
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        slug: wokim/nestjs-skywalking
         file: ./coverage/lcov.info
         flags: unittests # Optional
-        name: codecov-umbrella # Optional
 
     - name: Configure Git
       run: |
